--- a/Expt 1/Sci-kit Learn.ipynb
+++ b/Expt 1/Sci-kit Learn.ipynb
@@ -1,268 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3 4 5]\n",
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr = np.array([1, 2, 3, 4, 5])\n",
-    "print(arr)\n",
-    "print(type(arr))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3 4 5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "arr = np.array((1, 2, 3, 4, 5))\n",
-    "\n",
-    "print(arr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[1 2 3]\n",
-      "  [4 5 6]]\n",
-      "\n",
-      " [[1 2 3]\n",
-      "  [4 5 6]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr = np.array([[[1, 2, 3], [4, 5, 6]], [[1, 2, 3], [4, 5, 6]]])\n",
-    "\n",
-    "print(arr)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "a = np.array(42)\n",
-    "b = np.array([1, 2, 3, 4, 5])\n",
-    "c = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "d = np.array([[[1, 2, 3], [4, 5, 6]], [[1, 2, 3], [4, 5, 6]]])\n",
-    "\n",
-    "print(a.ndim)\n",
-    "print(b.ndim)\n",
-    "print(c.ndim)\n",
-    "print(d.ndim)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr = np.array([1, 2, 3, 4])\n",
-    "print(arr[1])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2 3 4 5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
-    "\n",
-    "print(arr[1:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5 6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
-    "\n",
-    "print(arr[-3:-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    g\n",
-      "1    e\n",
-      "2    e\n",
-      "3    k\n",
-      "4    s\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = np.array(['g', 'e', 'e', 'k', 's'])\n",
-    "   \n",
-    "ser = pd.Series(data)\n",
-    "print(ser)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   calories  duration\n",
-      "0       420        50\n",
-      "1       380        40\n",
-      "2       390        45\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = {\n",
-    "  \"calories\": [420, 380, 390],\n",
-    "  \"duration\": [50, 40, 45]\n",
-    "}\n",
-    "\n",
-    "#load data into a DataFrame object:\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "print(df) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   calories  duration\n",
-      "0       420        50\n",
-      "1       380        40\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.loc[[0,1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      calories  duration\n",
-      "day1       420        50\n",
-      "day2       380        40\n",
-      "day3       390        45\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame(data, index = [\"day1\", \"day2\", \"day3\"])\n",
-    "\n",
-    "print(df) "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***sklearn***"
+    "# Sklearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +89,8 @@
       " [4.6 3.4 1.4 0.3]\n",
       " [5.  3.4 1.5 0.2]\n",
       " [4.4 2.9 1.4 0.2]\n",
-      " [4.9 3.1 1.5 0.1]]\n"
+      " [4.9 3.1 1.5 0.1]]\n",
+      "<class 'numpy.ndarray'>\n"
      ]
     }
    ],
@@ -341,29 +99,30 @@
     "target_names = iris.target_names\n",
     "print(\"Feature names:\", feature_names)\n",
     "print(\"Target names:\", target_names)\n",
-    "print(\"\\nFirst 10 rows of X:\\n\", X[:10])"
+    "print(\"\\nFirst 10 rows of X:\\n\", X[:10])\n",
+    "print(type(X))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(90, 4)\n",
-      "(60, 4)\n",
-      "(90,)\n",
-      "(60,)\n"
+      "(105, 4)\n",
+      "(45, 4)\n",
+      "(105,)\n",
+      "(45,)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.4, random_state=1)\n",
+    "    X, y, test_size=0.3, random_state=1)\n",
     "\n",
     "print(X_train.shape)\n",
     "print(X_test.shape)\n",
@@ -374,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9833333333333333\n",
+      "Accuracy: 0.9777777777777777\n",
       "Predictions: ['versicolor', 'virginica']\n"
      ]
     }
@@ -420,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
