--- a/Expt 2/exp2.ipynb
+++ b/Expt 2/exp2.ipynb
@@ -228,7 +228,8 @@
       "source": [
         "## Imputation\n",
         "\n",
-        "Not really necessary as there are no missing values\n"
+        " - Process of removing columns and rows with missing values\n",
+        " - filling in missing values based on various parameters such as most frequent value or the mean median.\n"
       ]
     },
     {
@@ -1395,6 +1396,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "- process of removing values that fall in extremeties by defining an upper and lower limit based on various parameters\n",
+        "- The parameters can be relative to mean or standard deviation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "a. With standard deviation\n"
       ]
     },
@@ -1923,6 +1932,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- The process of grouping or binning a range of values into a pre-defined group of label"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1032,
       "metadata": {},
@@ -2120,6 +2136,13 @@
       "metadata": {},
       "source": [
         "## One hot encoding\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Replacing binary categories with numerical values"
       ]
     },
     {
@@ -2366,6 +2389,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- replacing columns with extremely large values with their respective log values"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1044,
       "metadata": {},
@@ -2532,6 +2562,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Normalizing a range of values such that all values lie between 0 and 1, thus allowing the model to prcocess them easily."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1045,
       "metadata": {},
@@ -2545,6 +2582,13 @@
       "metadata": {},
       "source": [
         "## Standardization"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Evenly distributing a range of values about their mean/ median"
       ]
     },
     {
@@ -3657,7 +3701,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.3"
+      "version": "3.9.7"
     },
     "orig_nbformat": 4
   },
